Fixed swiper layout issues

--- a/components/home/main/styles.module.scss
+++ b/components/home/main/styles.module.scss
@@ -2,43 +2,45 @@
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     gap: 10px;
-    grid-template-areas: 
-        "menu header header"
-        "menu swiper user"
-        "menu offers user";        
+    grid-template-areas:
+      "menu header header"
+      "menu swiper user"
+      "menu offers user";
     .menu {
         grid-area: menu;
-        height: 560px;
         background: #fff;
         border-radius: 10px;
         box-shadow: $shadow-1;
+        height: 560px;
     }
     .header {
         grid-area: header;
-        height: 40px;
         background: #fff;
         border-radius: 10px;
         box-shadow: $shadow-1;
+        height: 40px;
     }
     .swiper {
         grid-area: swiper;
-        height: 300px;
+        flex-grow: 1;
         background: #fff;
         border-radius: 10px;
         box-shadow: $shadow-1;
+        overflow: auto;
+        height: 300px;
     }
     .offers {
         grid-area: offers;
-        height: 200px;
         background: #fff;
         border-radius: 10px;
         box-shadow: $shadow-1;
+        height: 200px;
     }
     .user {
         grid-area: user;
-        height: 510px;
         background: #fff;
         border-radius: 10px;
         box-shadow: $shadow-1;
+        height: 510px;
     }
 }
